push code emp, dept, time keeping

--- a/Views/Department/Add.cshtml
+++ b/Views/Department/Add.cshtml
@@ -61,7 +61,7 @@
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="phone" class="form-label text-black required">Phone:</label>
+                                <label for="phone" class="form-label text-black">Phone:</label>
                                 <input type="tel" name="phone" class="form-control text-black" id="phone" required disabled>
                             </div>
                         </li>
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
+        @*<div class="col-lg-6">
             <div id="projects-info" class="card">
                 <div class="card-header d-flex flex-row justify-content-between">
                     <div class="header-title">
@@ -118,7 +118,7 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
