--- a/Views/Department/Edit.cshtml
+++ b/Views/Department/Edit.cshtml
@@ -59,13 +59,13 @@
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="email" class="form-label text-black required">Email:</label>
+                                <label for="email" class="form-label text-black">Email:</label>
                                 <input type="email" name="email" class="form-control text-black" id="email" value="" disabled required>
                             </div>
                         </li>
                         <li class="d-flex mb-2">
                             <div class="mb-3 w-100">
-                                <label for="phone" class="form-label text-black required">Phone:</label>
+                                <label for="phone" class="form-label text-black">Phone:</label>
                                 <input type="tel" name="phone" class="form-control text-black" id="phone" value="" disabled required>
                             </div>
                         </li>
