--- a/Views/Evaluation/Details.cshtml
+++ b/Views/Evaluation/Details.cshtml
@@ -5,186 +5,100 @@
 }
 
 <div class="conatiner-fluid content-inner mt-n5 py-0">
-    <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
-        <symbol id="check" viewBox="0 0 16 16">
-            <title>Check</title>
-            <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z">
-            </path>
-        </symbol>
-    </svg>
-    <div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="row row-cols-1">
-                    <div class="col-sm-12">
-                        <div class="card">
-                            <div class="card-body p-0">
-                                <div class="table-responsive pricing pt-2">
-                                    <table class="table table-bordered mb-0">
-                                        <tbody>
-                                            <tr>
-                                                <th colspan="5" class="bg-light">Features</th>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">Features 1</th>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center active">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">Features 2</th>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <rect x="6" y="11" width="12" height="2" rx="1"
-                                                              fill="currentColor" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center active">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">Features 3</th>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <rect x="6" y="11" width="12" height="2" rx="1"
-                                                              fill="currentColor" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center active">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                            </tr>
-                                            <tr>
-                                                <th scope="row">Features 4</th>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center active">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                                <td class="text-center">
-                                                    <svg class="icon-20" width="20" viewBox="0 0 24 24"
-                                                         fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M23 7L6.44526 17.8042C5.85082 18.1921 5.0648 17.9848 4.72059 17.3493L1 10.4798"
-                                                              stroke="currentColor" stroke-width="2"
-                                                              stroke-linecap="round" />
-                                                    </svg>
-                                                </td>
-                                            </tr>
-
-                                        </tbody>
-                                    </table>
-                                </div>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="d-flex flex-wrap align-items-center justify-content-between">
+                        <div class="d-flex flex-wrap align-items-center">
+                            <div class="d-flex flex-wrap align-items-center mb-3 mb-sm-0">
+                                <h4 class="me-2 h4 emp-name"></h4>
                             </div>
                         </div>
-                        <div class="card">
-                            <div class="row no-gutters">
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h4>Lifetime Membership</h4>
-                                        <p class="mt-2">
-                                            If you will take advantage of the above-listed amenities, classes,
-                                            and services, Life Time's membership fees may be worth the cost.
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+                        <div>
+                            <a role="button" href="" class="edit me-2 border-0 bg-transparent text-warning h4">
+                                <i class="fa-regular fa-pen-to-square"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="col-lg-6">
+            <div class="card">
+                <div class="card-header">
+                    <div class="header-title">
+                        <h4 class="card-title"></h4>
+                    </div>
+                </div>
+                <div class="card-body">
+                    <ul class="list-inline m-0 p-0">
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Hardwork: <span id="eval-hardwork"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Friendly: <span id="eval-friendly"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Creative: <span id="eval-creative"></span>
+                            </p>
+                        </li>
+                        <li class="d-flex mb-2">
+                            <p class="news-detail mb-0">
+                                Comment: <span id="eval-cmt"></span>
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
+
+@section script
+{
+    <script>
+        $(document).ready(function () {
+            const urlParams = new URLSearchParams(window.location.search);
+            const eval_num = urlParams.get("evalnum");
+            const proj_code = urlParams.get("projcode");
+            const emp_num = urlParams.get("empnum");
+
+            let data = {
+                eval_num: eval_num,
+                proj_code: proj_code,
+                emp_num: emp_num
+            };
+            $.ajax({
+                url: "/evaluation/detailsdata",
+                data: data,
+                type: "POST",
+                success: function (result) {
+                    switch (result.status) {
+                        case StatusCode.Success:
+                            data = JSON.parse(result.data);
+                            console.log(data);
+
+                            $(".emp-name").text("Evaluate: " + data.EMP_NAME + " - " + data.EVAL_NUM);
+                            $("h4.card-title").text("Project: " + data.PROJ_CODE + " - " + data.PROJ_NAME);
+                            $("#eval-hardwork").text(data.EVAL_HRDWRK);
+                            $("#eval-friendly").text(data.EVAL_FRDLY);
+                            $("#eval-creative").text(data.EVAL_CRTV);
+                            $("#eval-cmt").text(data.EVAL_CMT);
+                            $("a.edit").prop("href", "/Evaluation/Edit?evalnum=" + eval_num);
+                            $("#my-modal").fadeOut();
+                            break;
+                        default:
+                            AppendAlert("Get evaluation data failed!", StatusAlert.Error);
+                            break;
+                    }
+                }
+            })
+        })
+    </script>
+}
