--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -142,12 +142,12 @@
                             <span class="item-name">Project</span>
                         </a>
                     </li>
-                    @*<li class="nav-item" id="nav-evaluation">
+                    <li class="nav-item" id="nav-evaluation">
                         <a class="nav-link " href="@Url.Action("Index", "Evaluation")">
                             <i class="custom-fa-18 fa-solid fa-user-check" style="width: 16px;"></i>
                             <span class="item-name">Evaluation</span>
                         </a>
-                    </li>*@
+                    </li>
                     <li class="nav-item" id="nav-time-keeping">
                         <a class="nav-link " href="@Url.Action("Checkin", "TimeKeeping")">
                             <i class="custom-fa-18 fa-solid fa-clock"></i>
