--- a/Views/Department/Details.cshtml
+++ b/Views/Department/Details.cshtml
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
+        @*<div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
                     <div class="header-title">
@@ -101,7 +101,7 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
