--- a/Views/Employee/Details.cshtml
+++ b/Views/Employee/Details.cshtml
@@ -102,7 +102,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
+        @*<div class="col-lg-6">
             <div class="card">
                 <div class="card-header">
                     <div class="header-title">
@@ -140,7 +140,7 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
