--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -130,7 +130,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
+        @*<div class="col-lg-6">
             <div id="projects-info" class="card">
                 <div class="card-header d-flex flex-row justify-content-between">
                     <div class="header-title">
@@ -179,7 +179,7 @@
                     <hr class="my-4">
                 </div>
             </div>
-        </div>
+        </div>*@
     </div>
 </div>
 
